package pt.ipp.isep.dei.project.application.controller;

public class RunTestsController {

    public void getTests(){
        //get tests for Us013
    }
}
